import Foundation
import Security

/// 应用错误类型，LocalizedError 协议提供用户友好描述
enum AppError: LocalizedError {
    /// Keychain 操作失败
    case keychainError(String)
    /// API Key 未设置
    case apiKeyMissing
    /// 网络错误
    case networkError(String)

    var errorDescription: String? {
        switch self {
        case .keychainError(let msg): return String(format: NSLocalizedString("钥匙串错误: %@", comment: ""), msg)
        case .apiKeyMissing: return NSLocalizedString("API Key 未设置", comment: "")
        case .networkError(let msg): return String(format: NSLocalizedString("网络错误: %@", comment: ""), msg)
        }
    }
}

/// Keychain 底层存储后端协议（便于测试注入）
protocol KeychainBackend {
    func secItemAdd(_ query: CFDictionary) -> OSStatus
    func secItemDelete(_ query: CFDictionary) -> OSStatus
    func secItemCopyMatching(_ query: CFDictionary, _ result: UnsafeMutablePointer<CFTypeRef?>) -> OSStatus
}

/// 真实系统 Keychain 后端
struct SystemKeychainBackend: KeychainBackend {
    func secItemAdd(_ query: CFDictionary) -> OSStatus { SecItemAdd(query, nil) }
    func secItemDelete(_ query: CFDictionary) -> OSStatus { SecItemDelete(query) }
    func secItemCopyMatching(_ query: CFDictionary, _ result: UnsafeMutablePointer<CFTypeRef?>) -> OSStatus {
        SecItemCopyMatching(query, result)
    }
}

/// 内存 Keychain 后端（测试用，不依赖真实 Keychain）
final class InMemoryKeychainBackend: KeychainBackend {
    private var storage: [String: Data] = [:]

    private func key(for query: CFDictionary) -> String? {
        // 从 query dict 提取 service + account 作为存储 key
        guard let dict = query as? [String: Any] else { return nil }
        let service = dict[kSecAttrService as String] as? String ?? ""
        let account = dict[kSecAttrAccount as String] as? String ?? ""
        return "\(service):\(account)"
    }

    func secItemAdd(_ query: CFDictionary) -> OSStatus {
        guard let key = key(for: query) else { return errSecParam }
        guard let dict = query as? [String: Any] else { return errSecParam }
        storage[key] = dict[kSecValueData as String] as? Data
        return errSecSuccess
    }

    func secItemDelete(_ query: CFDictionary) -> OSStatus {
        guard let key = key(for: query) else { return errSecParam }
        storage.removeValue(forKey: key)
        return errSecSuccess
    }

    func secItemCopyMatching(_ query: CFDictionary, _ result: UnsafeMutablePointer<CFTypeRef?>) -> OSStatus {
        guard let key = key(for: query) else { return errSecParam }
        if let data = storage[key] {
            result.pointee = data as CFTypeRef
            return errSecSuccess
        }
        return errSecItemNotFound
    }
}

/// Keychain 单例管理 API Key 的增删改查
final class KeychainManager {
    /// 单例
    static let shared = KeychainManager()
    /// Keychain service 标识 "com.aibuilder.apikey"
    private let service = "com.aibuilder.apikey"
    /// 底层存储后端（生产用 SystemKeychainBackend，测试可注入 InMemoryKeychainBackend）
    internal var backend: KeychainBackend = SystemKeychainBackend()

    /// 私有初始化，外部只能用 shared
    private init() {}

    // MARK: - 旧 API（向后兼容）：等价于 provider: .deepseek

    /// 保存 API Key（旧 API，等价于 provider: .deepseek）。
    func saveAPIKey(_ key: String) throws {
        try saveAPIKey(key, for: .deepseek)
    }

    /// 读取 API Key（旧 API，等价于 provider: .deepseek）。无记录返回 nil。
    func getAPIKey() -> String? {
        getAPIKey(for: .deepseek)
    }

    /// 删除 API Key（旧 API，等价于 provider: .deepseek）。幂等，无记录不报错。
    func deleteAPIKey() {
        deleteAPIKey(for: .deepseek)
    }

    // MARK: - Day 13: 多 provider 命名空间 API

    /// Day 13: 按 provider 命名空间保存 API Key（account = provider.keychainAccount）。
    /// 为何先 SecItemDelete 再 SecItemAdd：幂等保存，避免重复 key 报 errSecDuplicateItem。失败抛 keychainError。
    func saveAPIKey(_ key: String, for provider: ModelProvider) throws {
        guard let data = key.data(using: .utf8) else { return }
        let query: [String: Any] = [
            kSecClass as String: kSecClassGenericPassword,
            kSecAttrService as String: service,
            kSecAttrAccount as String: provider.keychainAccount,
            kSecValueData as String: data
        ]
        // 先删后加：幂等保存，避免重复 key 报 errSecDuplicateItem
        _ = backend.secItemDelete(query as CFDictionary)
        let status = backend.secItemAdd(query as CFDictionary)
        guard status == errSecSuccess else {
            throw AppError.keychainError(String(format: NSLocalizedString("保存失败: %@", comment: ""), String(status)))
        }
    }

    /// Day 13: 按 provider 命名空间读取 API Key。无记录返回 nil。
    func getAPIKey(for provider: ModelProvider) -> String? {
        let query: [String: Any] = [
            kSecClass as String: kSecClassGenericPassword,
            kSecAttrService as String: service,
            kSecAttrAccount as String: provider.keychainAccount,
            kSecReturnData as String: true,
            kSecMatchLimit as String: kSecMatchLimitOne
        ]
        var result: CFTypeRef?
        let status = backend.secItemCopyMatching(query as CFDictionary, &result)
        guard status == errSecSuccess, let data = result as? Data else { return nil }
        return String(data: data, encoding: .utf8)
    }

    /// Day 13: 按 provider 命名空间删除 API Key。幂等，无记录不报错。
    func deleteAPIKey(for provider: ModelProvider) {
        let query: [String: Any] = [
            kSecClass as String: kSecClassGenericPassword,
            kSecAttrService as String: service,
            kSecAttrAccount as String: provider.keychainAccount
        ]
        _ = backend.secItemDelete(query as CFDictionary)
    }
}
